--- a/public/js/datetimepicker-master/index.html
+++ b/public/js/datetimepicker-master/index.html
@@ -134,7 +134,7 @@ $('#datetimepicker2').datetimepicker({
 	yearOffset:222,
 	lang:'ch',
 	timepicker:false,
-	format:'d/m/Y',
+	format:'m/d/Y',
 	formatDate:'Y/m/d',
 	minDate:'-1970/01/02', // yesterday is minimum date
 	maxDate:'+1970/01/02' // and tommorow is maximum date calendar
